--- a/src/app/pages/components/dummy/dummy.component.html
+++ b/src/app/pages/components/dummy/dummy.component.html
@@ -2,7 +2,7 @@
 
 <h4>Password hide show</h4>
 
-<div class="row">
+<div class="row logInForm">
     <div class="col-md-6 offset-md-3">
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
