--- a/src/app/pages/components/navbar/navbar.component.html
+++ b/src/app/pages/components/navbar/navbar.component.html
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="">comp</a>
+          <a class="nav-link " routerLink="/products">Products</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
