CCA-201-box created

--- a/src/app/pages/components/dummy/dummy.component.html
+++ b/src/app/pages/components/dummy/dummy.component.html
@@ -43,6 +43,9 @@
 
 }"
 >Click</button>
+<div class="box mt-5">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, harum odio. Eligendi iure, repellat praesentium, accusamus debitis quasi enim optio, voluptatibus incidunt animi distinctio deleniti harum hic pariatur fugiat assumenda?</p>
+</div>
 
 
 
