--- a/src/app/pages/components/dummy/dummy.component.scss
+++ b/src/app/pages/components/dummy/dummy.component.scss
@@ -2,3 +2,11 @@
 i{
     cursor: pointer;
 }
+
+.box{
+    width: 250px;
+    height: 250px;
+    background-color: blue;
+    color: #fff;
+    padding: 10px;
+}
